
ChangeLog for gschem

Most recent changes (version wise) are at the top of this file
All the changes are usually noted in this file when they are checked
into the cvs repository.

2000-06-04  Ales Hvezda  <ahvezda@geda.seul.org>

	* lib/system-gschemrc.in: Made net-consolidate enabled by default

	* src/i_vars.c: Made net_consolidate variable enabled (TRUE)

2000-06-03  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/g_rc.c, src/i_vars.c: Added continue-component-place *rc keyword
          (functions and variables)

	* lib/system-gschemrc.in: Added continue-component-place keyword

2000-06-01  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/g_rc.c, src/i_vars.c: Added promote-invisible *rc keyword
          (functions and variables)

	* lib/system-gschemrc.in: Added promote-invisible keyword

	* src/o_complex.c: Removed some lame cleverness related to the
          attribute_promotion variable (it was being used instead of a real
          flag which lead to some ambiguous code)

	* src/g_rc.c, src/i_vars.c: Added keep-invisible *rc keyword 
          (functions and variables)

	* lib/system-gschemrc.in: Added keep-invisible keyword

	* lib/system-gschemrc.in: Spent a little time cleaning this file up.
	  (more whitespace, a few missing comments)
	
2000-05-29  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/o_complex.c: Added Martin Benes' changes which implement the
	  promotion and attachment of floating attributes when you 
	  instanciate a component. 

	* src/o_complex.c, src/g_rc.c, src/i_vars.c: Made the above 
	  code configureable through the *rc files (keyword: 
	  "attribute-promotion")

	* lib/system-gschemrc.in: Added attribute-promotion keyword (enabled by
 	  default)

2000-05-27  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/o_misc.c: Oops, had a typo in o_rotate_90 which caused boxes 
	  to be rotated but not drawn 

	* src/x_dialog.c: In the multimulti dialog box, give the value entry
	  the keyboard focus by default (when an attribute is selected) 